started adding some confirmation messages on exit