@@ -80,10 +80,10 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 	public void setTitle(String title) {
 		if (title != null) {
 			super.setTitle(title + " - " + GlobalConfiguration.NAME + " v"
-					               + ((float) GlobalConfiguration.getVersion() / 100));
+					+ ((float) GlobalConfiguration.getVersion() / 100));
 		} else {
 			super.setTitle(GlobalConfiguration.NAME + " v"
-					               + ((float) GlobalConfiguration.getVersion() / 100));
+					+ ((float) GlobalConfiguration.getVersion() / 100));
 		}
 	}
 
@@ -112,8 +112,9 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 					showScriptSelector(current);
 				}
 			} else if (option.equals("Service Key")) {
-				serviceKey = (String) JOptionPane.showInputDialog(this, null, option, JOptionPane.QUESTION_MESSAGE,
-				                                                  null, null, serviceKey);
+				serviceKey = (String) JOptionPane.showInputDialog(this, null,
+						option, JOptionPane.QUESTION_MESSAGE, null, null,
+						serviceKey);
 				if (serviceKey == null || serviceKey.length() == 0) {
 					log.info("Services have been disabled");
 				} else if (serviceKey.length() != 40) {
@@ -152,11 +153,11 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			} else if (option.equals("Save Screenshot")) {
 				Bot current = getCurrentBot();
 				if (current != null) {
-					ScreenshotUtil.saveScreenshot(current,
-					                              current.getMethodContext().game.isLoggedIn());
+					ScreenshotUtil.saveScreenshot(current, current
+							.getMethodContext().game.isLoggedIn());
 				}
 			} else if (option.equals("Exit")) {
-				System.exit(0);
+				cleanExit();
 			}
 		} else if (menu.equals("Edit")) {
 			menuBar.saveProps();
@@ -197,7 +198,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 					for (String key : BotMenuBar.DEBUG_MAP.keySet()) {
 						Class<?> el = BotMenuBar.DEBUG_MAP.get(key);
 						boolean wasSelected = menuBar.getCheckBox(key)
-						                             .isSelected();
+								.isSelected();
 						menuBar.getCheckBox(key).setSelected(selected);
 						if (selected) {
 							if (!wasSelected) {
@@ -226,11 +227,11 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			} else if (option.equals("Project")) {
 				openURL(GlobalConfiguration.Paths.URLs.PROJECT);
 			} else if (option.equals("About")) {
-				JOptionPane.showMessageDialog(this, new String[]{
+				JOptionPane.showMessageDialog(this, new String[] {
 						"An open source bot developed by the community.",
 						"Visit " + GlobalConfiguration.Paths.URLs.SITE
-								+ "/ for more information."}, "About",
-				                              JOptionPane.INFORMATION_MESSAGE);
+								+ "/ for more information." }, "About",
+						JOptionPane.INFORMATION_MESSAGE);
 			}
 		} else if (menu.equals("Tab")) {
 			Bot curr = getCurrentBot();
@@ -243,11 +244,11 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 				toolBar.setScriptButton(BotToolBar.RUN_SCRIPT);
 				toolBar.setOverrideInput(false);
 				toolBar.setInputState(Environment.INPUT_KEYBOARD
-						                      | Environment.INPUT_MOUSE);
+						| Environment.INPUT_MOUSE);
 			} else {
 				setTitle(curr.getAccountName());
 				Map<Integer, Script> scriptMap = curr.getScriptHandler()
-				                                     .getRunningScripts();
+						.getRunningScripts();
 				if (scriptMap.size() > 0) {
 					if (scriptMap.values().iterator().next().isPaused()) {
 						toolBar.setScriptButton(BotToolBar.RESUME_SCRIPT);
@@ -354,11 +355,11 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 		if (AccountManager.getAccountNames().length == 0) {
 			JOptionPane
 					.showMessageDialog(this,
-					                   "No accounts found! Please create one before using the bot.");
+							"No accounts found! Please create one before using the bot.");
 			AccountManager.getInstance().showGUI();
 		} else if (bot.getMethodContext() == null) {
 			JOptionPane.showMessageDialog(this,
-			                              "The client is not currently loaded!");
+					"The client is not currently loaded!");
 		} else {
 			new ScriptSelector(this, bot).showGUI();
 		}
@@ -373,9 +374,9 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			ScriptManifest prop = s.getClass().getAnnotation(
 					ScriptManifest.class);
 			int result = JOptionPane.showConfirmDialog(this,
-			                                           "Would you like to stop the script " + prop.name() + "?",
-			                                           "Script", JOptionPane.OK_CANCEL_OPTION,
-			                                           JOptionPane.QUESTION_MESSAGE);
+					"Would you like to stop the script " + prop.name() + "?",
+					"Script", JOptionPane.OK_CANCEL_OPTION,
+					JOptionPane.QUESTION_MESSAGE);
 
 			if (result == JOptionPane.OK_OPTION) {
 				sh.stopScript(id);
@@ -401,7 +402,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 
 			public void windowClosing(WindowEvent e) {
 				dispose();
-				System.exit(0);
+				cleanExit();
 			}
 		});
 
@@ -427,8 +428,8 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 		menuBar.setBot(null);
 		setJMenuBar(menuBar);
 		textScroll = new JScrollPane(TextAreaLogHandler.TEXT_AREA,
-		                             JScrollPane.VERTICAL_SCROLLBAR_ALWAYS,
-		                             JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
+				JScrollPane.VERTICAL_SCROLLBAR_ALWAYS,
+				JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
 		textScroll.setBorder(null);
 		textScroll.setPreferredSize(new Dimension(PANEL_WIDTH, LOG_HEIGHT));
 		textScroll.setVisible(true);
@@ -452,7 +453,7 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 					menuBar.setOverrideInput(false);
 					String acct = bot.getAccountName();
 					toolBar.setTabLabel(bots.indexOf(bot) + 1,
-					                    acct == null ? "RuneScape" : acct);
+							acct == null ? "RuneScape" : acct);
 					toolBar.updateInputButton();
 					setTitle(acct);
 				}
@@ -504,31 +505,40 @@ public class BotGUI extends JFrame implements ActionListener, ScriptListener {
 			if (os == GlobalConfiguration.OperatingSystem.MAC) {
 				Class<?> fileMgr = Class.forName("com.apple.eio.FileManager");
 				Method openURL = fileMgr.getDeclaredMethod("openURL",
-				                                           new Class[]{String.class});
+						new Class[] { String.class });
 				openURL.invoke(null, url);
 			} else if (os == GlobalConfiguration.OperatingSystem.WINDOWS) {
 				Runtime.getRuntime().exec(
 						"rundll32 url.dll,FileProtocolHandler " + url);
 			} else { // assume Unix or Linux
-				String[] browsers = {"firefox", "opera", "konqueror",
-				                     "epiphany", "mozilla", "netscape"};
+				String[] browsers = { "firefox", "opera", "konqueror",
+						"epiphany", "mozilla", "netscape" };
 				String browser = null;
 				for (int count = 0; (count < browsers.length)
 						&& (browser == null); count++) {
-					if (Runtime.getRuntime()
-					           .exec(new String[]{"which", browsers[count]})
-					           .waitFor() == 0) {
+					if (Runtime.getRuntime().exec(
+							new String[] { "which", browsers[count] })
+							.waitFor() == 0) {
 						browser = browsers[count];
 					}
 				}
 				if (browser == null) {
 					throw new Exception("Could not find web browser");
 				} else {
-					Runtime.getRuntime().exec(new String[]{browser, url});
+					Runtime.getRuntime().exec(new String[] { browser, url });
 				}
 			}
 		} catch (Exception e) {
 			log.warning("Unable to open " + url);
+		}
+	}
+
+	private void cleanExit() {
+		int result = JOptionPane.showConfirmDialog(this,
+				"Are you sure you want to exit?", "Exit",
+				JOptionPane.OK_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE);
+		if (result == JOptionPane.OK_OPTION) {
+			System.exit(0);
 		}
 	}
 
